--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: plum;">
 
     <div>
         <h2>Заметки для себя любимой</h2>
 
-        <form action="">
+        <form>
             <input type="text"> <!-- для добавления новых заметок -->
         </form>
 
         <h3>Мои заметки</h3>
-        <ul></ul>
+        <ul name="new-note"></ul>
 
-        <button>Clear all</button>
+        <button style="background-color: rgb(136, 210, 136);">Add it!</button>
+        <button style="background-color: rgb(237, 151, 64);">Clear all</button>
 
     </div>
 
