--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <h2>Заметки для себя любимой</h2>
 
         <form>
-            <input type="text"> <!-- для добавления новых заметок -->
+            <input id="input" type="text"> <!-- для добавления новых заметок -->
         </form>
 
         <h3>Мои заметки</h3>
         <ul name="new-note"></ul>
 
-        <button style="background-color: rgb(136, 210, 136);">Add it!</button>
-        <button style="background-color: rgb(237, 151, 64);">Clear all</button>
+        <button name="button-add" style="background-color: rgb(136, 210, 136);">Add it!</button>
+        <button name="button-delete" style="background-color: rgb(237, 151, 64);">Clear all</button>
 
     </div>
 
