ошибки уже нет, но и функция пока не заработала

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </form>
 
         <h3>Мои заметки</h3>
-        <ul name="new-note"></ul>
+        <ul id="new_note"></ul>
 
-        <button name="button-add" style="background-color: rgb(136, 210, 136);">Add it!</button>
-        <button name="button-delete" style="background-color: rgb(237, 151, 64);">Clear all</button>
+        <button id="button_add" style="background-color: rgb(136, 210, 136);">Add it!</button>
+        <button id="button_delete" style="background-color: rgb(237, 151, 64);">Clear all</button>
 
     </div>
 
