созданны доп переменные, работаю над addNote

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <h2>Заметки для себя любимой</h2>
 
-        <form>
+        <form id="form">
             <input id="input" type="text"> <!-- для добавления новых заметок -->
         </form>
 
