работаю над addNote

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </form>
 
         <h3>Мои заметки</h3>
-        <ul id="new_note"></ul>
+        <ul id="notes"></ul>
 
         <button id="button_add" style="background-color: rgb(136, 210, 136);">Add it!</button>
         <button id="button_delete" style="background-color: rgb(237, 151, 64);">Clear all</button>
