--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <h3>Мои заметки</h3>
         <ul id="notes"></ul>
+        <div id="cont"></div>
 
         <button id="button_add" style="background-color: rgb(136, 210, 136);">Add it!</button>
         <button id="button_delete" style="background-color: rgb(237, 151, 64);">Clear all</button>
