--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <ul id="notes"></ul>
         <div id="cont"></div>
 
-        <button id="button_add" class="buttons" style="background-color: rgb(136, 205, 210);">Add it!</button>
-        <button id="button_delete" class="buttons" style="background-color: rgb(194, 212, 74);">Clear all</button>
+        <button id="button_add" class="buttons" style="background-color: rgb(136, 205, 210);">Add
+            it!</button>
+        <button id="button_delete" class="buttons" style="background-color: rgb(194, 212, 74);">Clear
+            all</button>
 
     </div>
 
